--- a/app/src/main/res/layout/fragment_add_notes.xml
+++ b/app/src/main/res/layout/fragment_add_notes.xml
@@ -9,86 +9,132 @@
     android:background="@color/colorBackground"
     tools:context=".fragments.AddNotesFragment">
 
-    <!-- CardView Container -->
+    <LinearLayout
+        android:id="@+id/customAppBar"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:padding="12dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:background="@color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:id="@+id/backBtn"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_back"
+            android:tint="@color/deep_navy"/>
+
+        <TextView
+            android:id="@+id/titleName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Add Notes"
+            android:textSize="20sp"
+            android:textColor="@color/deep_navy"
+            android:fontFamily="@font/roboto_bold"
+            android:gravity="center"/>
+
+        <ImageView
+            android:id="@+id/addBtn"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/ic_add_notes"
+            android:tint="@color/deep_navy"/>
+
+        <ImageView
+            android:id="@+id/searchBtn"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:src="@drawable/ic_search"
+            android:tint="@color/deep_navy"/>
+    </LinearLayout>
+
+
+   <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/notesRecycler"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/customAppBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+       tools:listitem="@layout/notes_add_item"/>
+
+
     <androidx.cardview.widget.CardView
         android:id="@+id/add_notes_card"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginBottom="32dp"
+        android:visibility="gone"
+        android:layout_margin="24dp"
         app:cardCornerRadius="24dp"
-        app:cardElevation="12dp"
+        app:cardElevation="14dp"
         app:cardBackgroundColor="@color/card_bg"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_margin="10dp"
             android:padding="28dp">
 
-            <!-- Heading -->
+
+            <!-- Title -->
             <TextView
                 android:id="@+id/add_note_heading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Create New Note"
-                android:textSize="24sp"
-                android:textStyle="bold"
+                android:textSize="22sp"
                 android:textColor="@color/deep_navy"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="24dp"
-                android:fontFamily="@font/roboto_bold"/>
+                android:fontFamily="@font/roboto_bold"
+                android:layout_gravity="center"
+                android:layout_marginBottom="22dp"/>
 
-            <!-- Note Type Selector -->
+
+            <!-- NOTE TYPE SELECTOR -->
             <LinearLayout
                 android:id="@+id/note_type_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:padding="14dp"
                 android:gravity="center_vertical"
-                android:padding="12dp"
-                android:layout_marginBottom="20dp"
-                android:weightSum="3"
+                android:orientation="horizontal"
                 android:background="@drawable/bg_note_type"
                 android:clipToOutline="true"
-                android:layout_marginStart="4dp"
-                android:layout_marginEnd="4dp">
+                android:layout_marginBottom="20dp">
 
                 <ImageView
                     android:id="@+id/noteTypeIcon"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
-                    android:layout_weight="0.8"
-                    android:contentDescription="Note Type Icon"
                     android:src="@drawable/ic_others"
                     android:scaleType="centerInside"/>
 
-                <LinearLayout
-                    android:layout_width="0dp"
+                <TextView
+                    android:id="@+id/noteTitle"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2.2"
-                    android:orientation="vertical"
-                    android:paddingStart="12dp">
-
-                    <TextView
-                        android:id="@+id/noteTypeTitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Note Category Name"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
-                        android:textColor="@color/deep_navy"
-                        android:fontFamily="@font/roboto_medium"/>
-                </LinearLayout>
+                    android:layout_marginStart="12dp"
+                    android:text="Note Category"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/deep_navy"
+                    android:fontFamily="@font/roboto_medium"/>
             </LinearLayout>
 
-            <!-- Note Title Input -->
+
+            <!-- NOTE TITLE -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/note_title_layout"
                 style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
@@ -102,11 +148,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
-                    android:textColor="@color/deep_navy"
-                    android:padding="8dp"/>
+                    android:padding="8dp"
+                    android:textColor="@color/deep_navy"/>
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- Note Description Input -->
+
+            <!-- NOTE DESCRIPTION -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/note_desc_layout"
                 style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
@@ -119,14 +166,15 @@
                     android:id="@+id/edtNoteDesc"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
-                    android:textSize="15sp"
                     android:gravity="top"
-                    android:inputType="textMultiLine"
+                    android:padding="8dp"
+                    android:textSize="15sp"
                     android:textColor="@color/deep_navy"
-                    android:padding="8dp"/>
+                    android:inputType="textMultiLine"/>
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- Save Button -->
+
+            <!-- SAVE BUTTON -->
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnSaveNote"
                 android:layout_width="match_parent"
@@ -135,8 +183,8 @@
                 android:textSize="16sp"
                 android:textColor="@android:color/white"
                 android:fontFamily="@font/roboto_medium"
-                app:cornerRadius="16dp"
-                app:backgroundTint="@color/accent_leaf_green"/>
+                app:backgroundTint="@color/accent_leaf_green"
+                app:cornerRadius="16dp"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
