--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,41 +1,59 @@
-    <resources>
-        <color name="black">#FF000000</color>
-        <color name="white">#FFFFFFFF</color>
-        <color name="transparent">#00000000</color>
+<?xml version="1.0" encoding="utf-8"?>
 
-        <color name="soft_beige">#F5F1E8</color>
-        <color name="light_sage">#DDE7D0</color>
-        <color name="pale_mint">#E9F7F5</color>
-        <color name="mist_blue">#DFEAF3</color>
-        <color name="warm_sand">#E6DCC3</color>
-        <color name="soft_gray">#ECECEC</color>
-        <color name="calm_olive">#C8D3AF</color>
-        <color name="card_bg">#B3FFFFFF</color>
+<resources>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="transparent">#00000000</color>
 
-        <color name="accent_leaf_green">#9FBC88</color>
-        <color name="accent_earth_brown">#A58F74</color>
+    <color name="soft_beige">#F5F1E8</color>
+    <color name="light_sage">#DDE7D0</color>
+    <color name="pale_mint">#E9F7F5</color>
+    <color name="mist_blue">#DFEAF3</color>
+    <color name="warm_sand">#E6DCC3</color>
+    <color name="soft_gray">#ECECEC</color>
+    <color name="calm_olive">#C8D3AF</color>
+    <color name="card_bg">#B3FFFFFF</color>
 
-        <color name="dark_charcoal">#1C1C1C</color>
-        <color name="deep_navy">#0B1E3F</color>
-        <color name="forest_green">#234F2B</color>
-        <color name="dark_olive">#556B2F</color>
-        <color name="deep_brown">#4B3621</color>
-        <color name="slate_gray">#2F4F4F</color>
+    <color name="accent_leaf_green">#9FBC88</color>
+    <color name="accent_earth_brown">#A58F74</color>
 
-        <color name="colorPrimary">#234F2B</color>
-        <color name="colorPrimaryVariant">#0B1E3F</color>
-        <color name="colorSecondary">#9FBC88</color>
-        <color name="colorSecondaryVariant">#A58F74</color>
-        <color name="colorBackground">#F5F1E8</color>
-        <color name="colorSurface">#FFFFFF</color>
-        <color name="colorError">#F44336</color>
-        <color name="colorOnPrimary">#FFFFFF</color>
-        <color name="colorOnSecondary">#FFFFFF</color>
-        <color name="colorOnSurface">#000000</color>
-        <color name="colorOnError">#FFFFFF</color>
+    <color name="dark_charcoal">#1C1C1C</color>
+    <color name="deep_navy">#0B1E3F</color>
+    <color name="forest_green">#234F2B</color>
+    <color name="dark_olive">#556B2F</color>
+    <color name="deep_brown">#4B3621</color>
+    <color name="slate_gray">#2F4F4F</color>
 
-        <color name="colorPrimaryDark">#1C1C1C</color>
-        <color name="colorBackgroundDark">#121212</color>
-        <color name="colorSurfaceDark">#2C2C2C</color>
-        <color name="colorOnSurfaceDark">#E0E0E0</color>
-    </resources>
+    <color name="colorPrimary">#234F2B</color>
+    <color name="colorPrimaryVariant">#0B1E3F</color>
+    <color name="colorSecondary">#9FBC88</color>
+    <color name="colorSecondaryVariant">#A58F74</color>
+    <color name="colorBackground">#F5F1E8</color>
+    <color name="colorSurface">#FFFFFF</color>
+    <color name="colorError">#F44336</color>
+    <color name="colorOnPrimary">#FFFFFF</color>
+    <color name="colorOnSecondary">#FFFFFF</color>
+    <color name="colorOnSurface">#000000</color>
+    <color name="colorOnError">#FFFFFF</color>
+
+    <color name="colorPrimaryDark">#1C1C1C</color>
+    <color name="colorBackgroundDark">#121212</color>
+    <color name="colorSurfaceDark">#2C2C2C</color>
+    <color name="colorOnSurfaceDark">#E0E0E0</color>
+
+    <color name="gray_50">#FAFAFA</color>
+    <color name="gray_100">#F5F5F5</color>
+    <color name="gray_200">#EEEEEE</color>
+    <color name="gray_300">#E0E0E0</color>
+    <color name="gray_400">#BDBDBD</color>
+    <color name="gray_500">#9E9E9E</color>
+    <color name="gray_600">#757575</color>
+    <color name="gray_700">#616161</color>
+    <color name="gray_800">#424242</color>
+    <color name="gray_900">#212121</color>
+
+    <color name="divider_gray">#BDBDBD</color>
+    <color name="hint_gray">#9E9E9E</color>
+    <color name="disabled_gray">#E0E0E0</color>
+    <color name="shadow_gray">#4D000000</color>
+</resources>
