--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -213,7 +213,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="12dp"
                 android:src="@drawable/ic_preferences"
-                android:tint="@color/forest_green" />
+                app:tint="@color/forest_green" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
