complete my each and evry modlue

--- a/app/src/main/res/layout/dialog_notes_events_handler.xml
+++ b/app/src/main/res/layout/dialog_notes_events_handler.xml
@@ -265,7 +265,9 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edtProfileName"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/deep_navy"
+                    android:textColorHint="@color/gray_300"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -277,7 +279,9 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edtProfileEmail"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/deep_navy"
+                    android:textColorHint="@color/gray_300"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
@@ -330,17 +334,20 @@
                 android:id="@+id/chkDefaultTheme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Default Theme"/>
+                android:text="Default Theme"
+                android:textColor="@color/deep_navy"/>
             <CheckBox
                 android:id="@+id/chkDarkTheme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Dark Theme"/>
+                android:text="Dark Theme"
+                android:textColor="@color/deep_navy"/>
             <CheckBox
                 android:id="@+id/chkLightTheme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Light Theme"/>
+                android:text="Light Theme"
+                android:textColor="@color/deep_navy"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnApplyTheme"
@@ -411,13 +418,19 @@
                     app:layout_constraintEnd_toStartOf="@id/switchMode"
                     app:layout_constraintHorizontal_bias="0"/>
 
-                <Switch
+                <com.google.android.material.switchmaterial.SwitchMaterial
                     android:id="@+id/switchMode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:scaleX="1.3"
+                    android:scaleY="1.3"
+                    android:thumbTint="@color/switch_thumb_color"
+                    android:trackTint="@color/switch_track_color"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"/>
+
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <com.google.android.material.button.MaterialButton
